--- a/config-broker/node.config
+++ b/config-broker/node.config
@@ -4,7 +4,7 @@
 
 IceGrid.Node.Name=node-x206m02
 IceGrid.Node.Endpoints=tcp
-Ice.Default.Locator=DemoIceGrid/Locator:tcp -h x206m01 -p 4061
+Ice.Default.Locator=DemoIceGrid/Locator:tcp -h 206m04 -p 4061
 IceGrid.Node.Data=db/node
 
 #IceGrid.Node.CollocateRegistry=1
