--- a/config-broker/grid.config
+++ b/config-broker/grid.config
@@ -4,9 +4,9 @@
 IceGrid.InstanceName=DemoIceGrid
 
 #
-IceGrid.Registry.Client.Endpoints=tcp -h x206m01 -p 4061
-IceGrid.Registry.Server.Endpoints=tcp -h x206m01
-IceGrid.Registry.Internal.Endpoints=tcp -h x206m01
+IceGrid.Registry.Client.Endpoints=tcp -h 206m04 -p 4061
+IceGrid.Registry.Server.Endpoints=tcp -h 206m04
+IceGrid.Registry.Internal.Endpoints=tcp -h 206m04
 
 IceGrid.Registry.LMDB.Path=db/registry
 
