--- a/MesaVotacion/app/build.gradle
+++ b/MesaVotacion/app/build.gradle
@@ -23,6 +23,7 @@ dependencies {
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:30.0-jre'
     implementation 'com.zeroc:ice:3.7.2'
+    implementation 'com.zeroc:icegrid:3.7.10'
 }
 slice {
     java {
