--- a/config-broker/node.config
+++ b/config-broker/node.config
@@ -2,9 +2,9 @@
 # IceGrid node configuration.
 #
 
-IceGrid.Node.Name=node-x206m02
+IceGrid.Node.Name=node-104m12
 IceGrid.Node.Endpoints=tcp
-Ice.Default.Locator=DemoIceGrid/Locator:tcp -h 206m04 -p 4061
+Ice.Default.Locator=DemoIceGrid/Locator:tcp -h 192.168.131.111 -p 4061
 IceGrid.Node.Data=db/node
 
 #IceGrid.Node.CollocateRegistry=1
