--- a/MesaVotacionLocal/build.gradle
+++ b/MesaVotacionLocal/build.gradle
@@ -18,6 +18,7 @@ repositories {
 dependencies {
     implementation 'com.zeroc:ice:3.7.2'
     implementation 'com.zeroc:icegrid:3.7.10'
+    implementation 'org.postgresql:postgresql:42.3.1'
 }
 
 slice {
