fix: tarea adapt

--- a/MesaVotacion/app/build.gradle
+++ b/MesaVotacion/app/build.gradle
@@ -27,7 +27,7 @@ dependencies {
 }
 slice {
     java {
-        files = [file('Elecciones.ice'), file('ReliableVoto.ice')]
+        files = [file('Elecciones.ice'), file('ReliableVoto.ice'), file('consultas.ice')]
     }
 }
 
