--- a/TestMesaVotacion/app/build.gradle
+++ b/TestMesaVotacion/app/build.gradle
@@ -19,26 +19,25 @@ repositories {
 }
 
 dependencies {
-    
+
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:30.0-jre'
     implementation 'com.zeroc:ice:3.7.2'
     implementation 'com.zeroc:icegrid:3.7.10'
 }
+
 slice {
     java {
-        files = [file('Elecciones.ice'), file('ReliableVoto.ice'), file('consultas.ice'),file('VotacionTest.ice')]
+        files = [file('VotacionTest.ice')]
     }
 }
 
-
 application {
     // Define the main class for the application.
-    mainClass = 'MesaVotacion.MesaVotacion'
+    mainClass = 'TestMesaVotacion.TestMesaVotacion'
 }
 
 run {
     standardInput = System.in
 }
-
 
